# cathedral.fabric

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  RELEASE.md  SECURITY.md  SHA256SUMS  deny.toml
.github/workflows/: audit.yml  certify-short.yml  ci.yml  clippy.yml  deny.yml  fmt.yml  fuzz-short.yml  nightly.yml  publish.yml  release.yml  sim-short.yml  test.yml
crates/cathedral_certify/: Cargo.toml
crates/cathedral_certify/src/: certificate.rs  certifier.rs  lib.rs  signature.rs  validator.rs
crates/cathedral_cli/: Cargo.toml
crates/cathedral_cli/src/: main.rs
crates/cathedral_cluster/: Cargo.toml
crates/cathedral_cluster/src/: consensus.rs  coordinator.rs  leader.rs  lib.rs  membership.rs  remote.rs  worker.rs
crates/cathedral_core/: Cargo.toml
crates/cathedral_core/src/: capability.rs  error.rs  hash.rs  id.rs  lib.rs  time.rs  version.rs
crates/cathedral_log/: Cargo.toml
crates/cathedral_log/fuzz.targets/: Cargo.toml  fuzz_encode_decode.rs  fuzz_event_parser.rs  fuzz_hash_chain.rs  fuzz_streaming.rs
crates/cathedral_log/src/: chain.rs  cursor.rs  encoding.rs  event.rs  lib.rs  stream.rs
crates/cathedral_plan/: Cargo.toml
crates/cathedral_plan/src/: compiler.rs  dag.rs  dsl.rs  lib.rs  resource.rs  validate.rs
crates/cathedral_policy/: Cargo.toml
crates/cathedral_policy/src/: compiler.rs  lang.rs  lib.rs  matcher.rs  proof.rs  redact.rs
crates/cathedral_replay/: Cargo.toml
crates/cathedral_replay/src/: diff.rs  engine.rs  lib.rs  snapshot.rs  state.rs  trace.rs
crates/cathedral_runtime/: Cargo.toml
crates/cathedral_runtime/src/: backpressure.rs  engine.rs  executor.rs  lib.rs  monitor.rs  scheduler.rs
crates/cathedral_server/: Cargo.toml
crates/cathedral_server/src/: api.rs  auth.rs  handler.rs  lib.rs  main.rs  middleware.rs
crates/cathedral_sim/: Cargo.toml
crates/cathedral_sim/src/: failure.rs  harness.rs  lib.rs  network.rs  node.rs  record.rs  seed.rs
crates/cathedral_storage/: Cargo.toml
crates/cathedral_storage/src/: address.rs  blob.rs  compact.rs  lib.rs  snapshot.rs  store.rs
crates/cathedral_tool/: Cargo.toml
crates/cathedral_tool/src/: adapter.rs  lib.rs  normalize.rs  registry.rs  schema.rs  trait_.rs  validate.rs
crates/cathedral_tui/: Cargo.toml
crates/cathedral_tui/src/: input.rs  layout.rs  lib.rs  main.rs  renderer.rs  ui.rs  view.rs
crates/cathedral_wasm/: Cargo.toml
crates/cathedral_wasm/src/: abi.rs  compile.rs  fuel.rs  host.rs  lib.rs  memory.rs  sandbox.rs
docs/: ARCHITECTURE.md  BUNDLES.md  CANONICAL_ENCODING.md  CAPABILITIES.md  CERTIFY.md  CLUSTER.md  CONTRIBUTING.md  DIFF.md  EVENT_LOG.md  FAILURE_MODES.md  PLANNING.md  POLICY.md  PUBLISHING.md  REPLAY.md  REPO_METADATA.md  SCHEDULING.md  SECURITY.md  SIMULATION.md  SNAPSHOTS.md  STORAGE.md  TOOLS.md  WASM.md
scripts/: release.sh  set_github_metadata.sh
