[workspace]
members = [
    "crates/cathedral_core",
    "crates/cathedral_log",
    "crates/cathedral_replay",
    "crates/cathedral_plan",
    "crates/cathedral_runtime",
    "crates/cathedral_policy",
    "crates/cathedral_tool",
    "crates/cathedral_wasm",
    "crates/cathedral_storage",
    "crates/cathedral_cluster",
    "crates/cathedral_sim",
    "crates/cathedral_cli",
    "crates/cathedral_server",
    "crates/cathedral_tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cathedral-fabric/cathedral.fabric"
authors = ["Cathedral Fabric Contributors"]

[workspace.dependencies]
# Canonical encoding (byte-stable across platforms)
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_cbor = "0.11"
rmp-serde = "1.3"
postcard = { version = "1.1", features = ["use-std"] }

# Crypto (hash chains, content addressing)
blake3 = "1.5"
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["serde"] }

# Determinism
ahash = { version = "0.8", features = ["serde"] }
rustc-hash = "2.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"

# Consensus/Cluster
raft = { version = "0.7", default-features = false }
openraft = { version = "0.9", features = ["serde"] }
prost = "0.13"

# WASM sandbox
wasmtime = { version = "26", default-features = false, features = ["cranelift", "async", "component-model"] }
wasmtime-wasi = "26"

# Storage
redb = { version = "2.1", features = ["logging"] }
sled = { version = "0.34", default-features = false }

# Parsing
lalrpop = { version = "0.20", features = ["lexer"] }
regex = "1.11"

# Fuzzing and testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
quickcheck = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# Logging/Tracing
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-chrome = "0.7"

# Error handling
thiserror = "2.0"
anyhow = "1.0"
color-eyre = "0.6"

# Testing
tempfile = "3.13"
console = "0.15"
indicatif = "0.17"

# Misc
bytes = "1.7"
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
indexmap = { version = "2.6", features = ["serde"] }
bitvec = "1.0"

# Security
secrecy = { version = "0.10", features = ["serde"] }
zeroize = "1.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
debug = true

[profile.dev.package."*"]
opt-level = 2

[workspace.metadata.dylint]
libraries = [{ path = "./lints" }]
