[package]
name = "cathedral_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "cathedral"
path = "src/main.rs"

[dependencies]
cathedral_core = { path = "../cathedral_core" }
cathedral_log = { path = "../cathedral_log" }
cathedral_replay = { path = "../cathedral_replay" }
cathedral_plan = { path = "../cathedral_plan" }
cathedral_runtime = { path = "../cathedral_runtime" }
cathedral_policy = { path = "../cathedral_policy" }
cathedral_tool = { path = "../cathedral_tool" }
cathedral_storage = { path = "../cathedral_storage" }
cathedral_cluster = { path = "../cathedral_cluster" }
cathedral_sim = { path = "../cathedral_sim" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
color-eyre = { workspace = true }
indexmap = { workspace = true }
console = "0.15"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.13"
