[package]
name = "cathedral_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types for CATHEDRAL.FABRIC - IDs, hashes, capabilities, and time"
keywords = ["deterministic", "hash", "capability", "id"]
categories = ["data-structures", "date-and-time"]
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true, features = ["v5"] }
chrono = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
