[package]
name = "cathedral_log"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cathedral_core = { path = "../cathedral_core" }

serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
quickcheck = { workspace = true }
