[package]
name = "cathedral_plan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Workflow DSL compiler and DAG builder for CATHEDRAL.FABRIC"
keywords = ["dsl", "dag", "workflow", "compiler"]
categories = ["compilers", "config"]
readme = "../../README.md"

[dependencies]
cathedral_core = { path = "../cathedral_core" }
cathedral_tool = { path = "../cathedral_tool" }
cathedral_policy = { path = "../cathedral_policy" }

serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
lalrpop = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
