[package]
name = "cathedral_policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cathedral_core = { path = "../cathedral_core" }

serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
lalrpop = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
quickcheck = { workspace = true }
