[package]
name = "cathedral_replay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Replay engine and diff tool for deterministic execution in CATHEDRAL.FABRIC"
keywords = ["replay", "diff", "deterministic", "testing"]
categories = ["development-tools::testing", "command-line-utilities"]
readme = "../../README.md"

[dependencies]
cathedral_core = { path = "../cathedral_core" }
cathedral_log = { path = "../cathedral_log" }
cathedral_storage = { path = "../cathedral_storage" }

serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
