[package]
name = "cathedral_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cathedral_core = { path = "../cathedral_core" }
cathedral_log = { path = "../cathedral_log" }
cathedral_plan = { path = "../cathedral_plan" }
cathedral_tool = { path = "../cathedral_tool" }
cathedral_policy = { path = "../cathedral_policy" }
cathedral_wasm = { path = "../cathedral_wasm" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
