[package]
name = "cathedral_server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "cathedral-server"
path = "src/main.rs"

[dependencies]
cathedral_core = { path = "../cathedral_core" }
cathedral_log = { path = "../cathedral_log" }
cathedral_replay = { path = "../cathedral_replay" }
cathedral_runtime = { path = "../cathedral_runtime" }
cathedral_cluster = { path = "../cathedral_cluster" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1.5"
http = "1.2"

[dev-dependencies]
tempfile = "3.13"
