[package]
name = "cathedral_sim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cathedral_core = { path = "../cathedral_core" }
cathedral_log = { path = "../cathedral_log" }
cathedral_cluster = { path = "../cathedral_cluster" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
fnv = "1.0"

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
