[package]
name = "cathedral_storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Content-addressed storage and snapshot management for CATHEDRAL.FABRIC"
keywords = ["storage", "snapshot", "content-addressable", "cas"]
categories = ["database", "database-implementations"]
readme = "../../README.md"

[dependencies]
cathedral_core = { path = "../cathedral_core" }

serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
redb = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3.13"
