[package]
name = "cathedral_tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Tool sandbox, normalization, and capability enforcement for CATHEDRAL.FABRIC"
keywords = ["sandbox", "tools", "capability", "isolation"]
categories = ["development-tools"]
readme = "../../README.md"

[dependencies]
cathedral_core = { path = "../cathedral_core" }
cathedral_policy = { path = "../cathedral_policy" }

serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
